WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141522
Fix some Mac linker warnings
https://bugs.webkit.org/show_bug.cgi?id=141522
Summary
Fix some Mac linker warnings
Daniel Bates
Reported
2015-02-12 11:02:22 PST
I see the following linker warnings: ld: warning: cannot export hidden symbol __ZN7WebCore20LogNotYetImplementedE from /.../OpenSource/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/x86_64/Logging.o ld: warning: cannot export hidden symbol _wkCreateURLPasteboardFlavorTypeName from /.../OpenSource/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/x86_64/WebCoreSystemInterface.o ld: warning: cannot export hidden symbol _wkCreateURLNPasteboardFlavorTypeName from /.../OpenSource/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/x86_64/WebCoreSystemInterface.o
Attachments
Patch
(3.18 KB, patch)
2015-02-12 11:03 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(3.85 KB, patch)
2015-02-12 12:23 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2015-02-12 11:03:54 PST
Created
attachment 246455
[details]
Patch
Daniel Bates
Comment 2
2015-02-12 12:23:28 PST
Created
attachment 246462
[details]
Patch
WebKit Commit Bot
Comment 3
2015-02-12 13:18:49 PST
Comment on
attachment 246462
[details]
Patch Clearing flags on attachment: 246462 Committed
r180007
: <
http://trac.webkit.org/changeset/180007
>
WebKit Commit Bot
Comment 4
2015-02-12 13:18:53 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug