Fix some Mac linker warnings https://bugs.webkit.org/show_bug.cgi?id=141522

Patch by Daniel Bates <dabates@apple.com> on 2015-02-12
Reviewed by Alex Christensen.

Following <https://trac.webkit.org/changeset/179945>, the linker warns about the following hidden WebCore symbols:

ld: warning: cannot export hidden symbol __ZN7WebCore20LogNotYetImplementedE from /.../OpenSource/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/x86_64/Logging.o
ld: warning: cannot export hidden symbol _wkCreateURLPasteboardFlavorTypeName from /.../OpenSource/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/x86_64/WebCoreSystemInterface.o
ld: warning: cannot export hidden symbol _wkCreateURLNPasteboardFlavorTypeName from /.../OpenSource/WebKitBuild/WebCore.build/Debug/WebCore.build/Objects-normal/x86_64/WebCoreSystemInterface.o

* WebCore.exp.in: Remove symbols for functions wkCreateURLPasteboardFlavorTypeName and wkCreateURLNPasteboardFlavorTypeName.
* platform/Logging.h: Export WTFLogChannel for LogNotYetImplemented, which is referenced from
notImplementedLoggingChannel() in file NotImplemented.cpp. We make use of the associated
header, NotImplemented.h, in both WebKit and WebKit2.
* platform/mac/WebCoreSystemInterface.mm: Remove declarations for functions
wkCreateURLPasteboardFlavorTypeName and wkCreateURLNPasteboardFlavorTypeName that
were inadvertently not removed in r25494.

Canonical link: https://commits.webkit.org/159562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180007 268f45cc-cd09-0410-ab3c-d52691b4dbfc